# orthophotos-downloader

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/scripts/: generate_test_summary.py
.github/workflows/: publish.yml  static-analysis.yml  tests.yml
examples/: demo_bavaria_download.ipynb  demo_download.ipynb  download_test.py
examples/data/: test_area.geojson
src/orthophotos_downloader/: __init__.py  orthophotos_downloader.code-workspace_jup.code-workspace  show_folder_tiffs.py  show_tiff.py  test_central_wms_manager.py  test_multi_service_downloader.py  tiff_uebersicht.ipynb
src/orthophotos_downloader/data_scraping/: image_download.py  wms_germany.py
tests/: README.md  download_test.py
