[build-system]
requires = ["hatchling >= 1.24.2"]
build-backend = "hatchling.build"

[project]
name = "orthophotos_downloader"
version = "1.0.1"
authors = [{name = "Daniel Godin", email = "contact@dangodin.com"},
           {name = "Joachim Ferstl", email = "jferstl@ffe.de"},]

description = "Python wrapper for various available WMS services to simplify the download of orthophotos. Currently focused on Germany."
keywords = ["aerial images", "orthophotos"]
readme = "README.md"

requires-python = ">=3.11"

license = { text = "MIT License" }

dependencies = [
    "geopandas>=1.0.0",
    "imageio>=2.34.0",
    "numpy>=1.24.0",
    "OWSLib>=0.30.0",
    "rasterio>=1.3.11",
    "tenacity>=9.0.0",
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: GIS",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
]

[project.urls]
Repository = "https://github.com/ffe-munich/orthophotos-downloader"

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "black",
    "flake8",
    "pytest>=8.0.0",
    "pytest-xdist>=3.5.0",
    "pytest-html>=4.1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "-ra",
    "--color=yes",
    "-s",  # Show print output
]
markers = [
    "download: WMS download tests",
    "critical: Critical tests that must pass (Bayern, Baden-Württemberg)",
]
